---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: ????
  Info:
    - Add circuit connectors to thumbnail
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025. 01. 30
  Info:
    - Mod portal release
---------------------------------------------------------------------------------------------------
Version: 0.0.1
Date: 2025. 01. 30
  Info:
    - Initial commit
    - Add readme and thumbnail
    - Add the circuit connector and all the magic sauce